tests/ui/implied-bounds/normalization-preserve-equality.borrowck.stderr
error: lifetime may not live long enough
  --> $DIR/normalization-preserve-equality.rs:24:1
   |
LL | fn test_borrowck<'a, 'b>(_: (<Equal<'a, 'b> as Trait>::Ty, Equal<'a, 'b>)) {
   | ^^^^^^^^^^^^^^^^^--^^--^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |                |   |
   | |                |   lifetime `'b` defined here
   | |                lifetime `'a` defined here
   | requires that `'a` must outlive `'b`
   |
   = help: consider adding the following bound: `'a: 'b`

error: lifetime may not live long enough
  --> $DIR/normalization-preserve-equality.rs:24:1
   |
LL | fn test_borrowck<'a, 'b>(_: (<Equal<'a, 'b> as Trait>::Ty, Equal<'a, 'b>)) {
   | ^^^^^^^^^^^^^^^^^--^^--^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |                |   |
   | |                |   lifetime `'b` defined here
   | |                lifetime `'a` defined here
   | requires that `'b` must outlive `'a`
   |
   = help: consider adding the following bound: `'b: 'a`

help: `'a` and `'b` must be the same: replace one with the other

error: aborting due to 2 previous errors

